# revenium-middleware-openai-python

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  context7.json  pyproject.toml
examples/: README.md  __init__.py  azure_basic.py  azure_streaming.py  example_decorator.py  example_tracing.py  getting_started.py  langchain_async_examples.py  openai_basic.py  openai_responses.py  openai_streaming.py  trace_visualization_example.py
revenium_middleware_openai/: __init__.py  azure_config.py  azure_model_resolver.py  config.py  enforcement.py  exceptions.py  middleware.py  provider.py  trace_fields.py
revenium_middleware_openai/langchain/: __init__.py  _utils.py  unified_handler.py
tests/: conftest.py  test_comprehensive.py  test_middleware.py  test_trace_visualization.py
